--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A programming simulation of the monkey physics problem: https://www.youtube.com/watch?v=cxvsHNRXLjw",
   "main": "bundle.js",
   "scripts": {
-    "build": "webpack main.js -o bundle.js"
+    "build": "webpack main.js -o public/bundle.js"
   },
   "repository": {
     "type": "git",
